2012-09-06  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/state/transient.jl: :after-set for
	decorate-transients

2012-09-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/util/compat.jl: remove decorate-transients from compat
	list (defcustom works now)

2012-09-04  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/state/transient.jl: make decorate-transients a
	defcustom.

	* lisp/sawfish/wm/tabs/tab.jl: improve check-win. Always rebuild list
	of marked windows when a marked window is closed. [fuchur]

	* lisp/sawfish/wm/tabs/tabgroup.jl: add frame-style-tabs-support-p.
	Only allow tabbing a window, if the frame-style of the parent window
	has support for tabs [note that in Sawfish different windows can have
	different frame-styles!] [fuchur]

	* themes/StyleTab/theme.jl: updated for latest tab changes [fuchur]

	* themes/Elberg-tabbed/theme.jl: support for tab-system as of 1.9.1
	[fuchur]

	* themes/gradient-tabbed/theme.jl: support for tab-system as of 1.9.1
	[fuchur]

	* lisp/sawfish/wm/keymaps.jl: improved default keymap for titlebar and
	tabbar [fuchur]

2012-08-31  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tabs/tab.jl: add support for coloring a window-title
	in a different color, when a window is marked for tabbing [fuchur]

	* themes/StyleTab/theme.jl: color window-title in a different color,
	when a window is marked for tabbing [fuchur]

	* themes/StyleTab/{Default,Glass,Reduce,Smoothly,WixDa}: updated
	image-sets for StyleTab [fuchur]

	* man/news.texi: updated

	* Makefile.in: also remove NEWS and config.h.in upon gitclean

	* install-sh: updated to 2011-01-19.21

2012-08-30  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tabs/tabgroup.jl: support for sticky-workspace and
	sticky-viewport in tabs. [fuchur]

2012-08-29  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tabs/tab.jl: remember default cursor [fuchur]
